# ijc-hw1

./: .gitignore  CMakeLists.txt  Makefile  bitset.c  bitset.h  eratosthenes.c  eratosthenes.h  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c
